(ui/Workspace/CodeView) fix message alignment

--- a/packages/app/src/ui/Workspace/CodeView/index.scss
+++ b/packages/app/src/ui/Workspace/CodeView/index.scss
@@ -99,6 +99,7 @@
 			.codeview__line__number {
 				min-width: 70px;
 				justify-content: center;
+				align-items: center;
 				padding: 0;
 				border-right: none;
 				background-color: transparent;
